# jabberhive-cli

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  learn.sh  run.sh
src/: CMakeLists.txt  Makefile  cli.h  main.c  pervasive.h  signal.c  socket.c
src/error/: CMakeLists.txt  error.h
